started Asteroid framework

--- a/4618_Template.vcxproj
+++ b/4618_Template.vcxproj
@@ -89,9 +89,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="CAsteroid.h" />
+    <ClInclude Include="CAsteroidGame.h" />
     <ClInclude Include="CBase4618.h" />
+    <ClInclude Include="CGameObject.h" />
+    <ClInclude Include="CMissle.h" />
     <ClInclude Include="Control.h" />
     <ClInclude Include="CPong.h" />
+    <ClInclude Include="CShip.h" />
     <ClInclude Include="CSketch.h" />
     <ClInclude Include="cvui.h" />
     <ClInclude Include="Lab3Functions.h" />
@@ -101,9 +106,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="4618_Template.cpp" />
+    <ClCompile Include="CAsteroid.cpp" />
+    <ClCompile Include="CAsteroidGame.cpp" />
     <ClCompile Include="CBase4618.cpp" />
+    <ClCompile Include="CGameObject.cpp" />
+    <ClCompile Include="CMissle.cpp" />
     <ClCompile Include="Control.cpp" />
     <ClCompile Include="CPong.cpp" />
+    <ClCompile Include="CShip.cpp" />
     <ClCompile Include="CSketch.cpp" />
     <ClCompile Include="Lab3Functions.cpp" />
     <ClCompile Include="Serial.cpp" />
