routine save: working on asteroid function

--- a/4618_Template.vcxproj
+++ b/4618_Template.vcxproj
@@ -93,7 +93,7 @@
     <ClInclude Include="CAsteroidGame.h" />
     <ClInclude Include="CBase4618.h" />
     <ClInclude Include="CGameObject.h" />
-    <ClInclude Include="CMissle.h" />
+    <ClInclude Include="CMissile.h" />
     <ClInclude Include="Control.h" />
     <ClInclude Include="CPong.h" />
     <ClInclude Include="CShip.h" />
@@ -110,7 +110,7 @@
     <ClCompile Include="CAsteroidGame.cpp" />
     <ClCompile Include="CBase4618.cpp" />
     <ClCompile Include="CGameObject.cpp" />
-    <ClCompile Include="CMissle.cpp" />
+    <ClCompile Include="CMissile.cpp" />
     <ClCompile Include="Control.cpp" />
     <ClCompile Include="CPong.cpp" />
     <ClCompile Include="CShip.cpp" />
